add no position

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,17 +31,21 @@
                         <label for="end">Ends:</label>
                         <input type="text" id="end" name="user_end">
                     </li>
-                    <li class="bottom">
+                    <li class="middle">
                         <label for="con">Contains:</label>
                         <input type="text" id="con" name="user_con">
                     </li>
-                    <li class="bottom">
+                    <li class="middle">
                         <label for="not">Doesn't contain:</label>
                         <input type="text" id="not" name="user_not">
                     </li>
                     <li class="bottom">
                         <label for="pos">Position:</label>
                         <input type="text" id="pos" name="user_pos">
+                    </li>
+                    <li class="bottom">
+                        <label for="posn">Not position:</label>
+                        <input type="text" id="posn" name="user_posn">
                     </li>
                     <li class="click">
                         <button type="submit" onclick="resetInput()">RESET</button>
