--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,13 +46,13 @@
 					<input type="text" id="con">
 				</li>
 				<li class="thirty">
-					<label for="rep">Doesn't repeat:</label>
+					<label for="rep">Not repeat:</label>
 					<i class="fa-solid fa-question"></i>
 					<div class="help">Select the letters which occur only once in the word</div>
 					<input type="text" id="rep">
 				</li>
 				<li class="thirty">
-					<label for="not">Doesn't contain:</label>
+					<label for="not">Not contain:</label>
 					<i class="fa-solid fa-question"></i>
 					<div class="help">Select the letters which the word doesn't contain</div>
 					<input type="text" id="not">
