--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
 <body>
 	<h1>Word finder</h1>
 	<nav>
-		<form action="javascript:void(0);">
+		<form>
 			<ul>
 				<li class="thirty">
 					<label for="start">Starts with:</i></label>
@@ -72,8 +72,8 @@
 				</li>
 			</ul>
 			<div id="click">
-				<button type="submit" onclick="resetInput()">Reset</button>
-				<button type="submit" onclick="search()">Search</button>
+				<button type="reset" onclick="resetInput()">Reset</button>
+				<button type="submit">Search</button>
 			</div>
 		</form>
 	</nav>
