--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -199,7 +199,7 @@ ol > li
 	border-bottom: 1px dashed black;
 }
 
-#counter
+#counter, #sug
 {
 	font-size: 16px;
 	width: 10%;
@@ -228,7 +228,7 @@ ol > li
 		width: 50%;
 	}
 
-	#counter
+	#counter, #sug
 	{
 		width: 20%;
 	}
@@ -287,7 +287,7 @@ ol > li
 		grid-template-columns: repeat(2, 1fr);
 	}
 
-	#counter
+	#counter, #sug
 	{
 		width: 40%;
 	}
